feature-configs/deploy/gatekeeper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: gatekeeper-system
