feature-configs/deploy/gatekeeper/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: gatekeeper-operator-controller-manager-metrics-service
  namespace: gatekeeper-system
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    control-plane: controller-manager
